<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:stretchColumns="4">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_neutral10">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_neutral10"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="Crazy Layout"
            app:titleTextColor="@color/white" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:background="@color/design_default_color_secondary_variant"
            android:paddingLeft="10dp"
            android:text="@string/producto"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:background="@color/design_default_color_secondary_variant"
            android:text="@string/subtotal"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jabon_de_manod_x_1"
            android:layout_span="3"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shampoo_monster_x_1"
            android:layout_span="3"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patatas_duria_x_2"
            android:layout_span="3"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detergente_limpiadin_x_1"
            android:layout_span="3"/>

        <TextView
            android:id="@+id/textVie11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13_4"
            android:textAlignment="center"/>
    </TableRow>

    <TableRow
        android:layout_height="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/material_dynamic_neutral40">

        <view
            android:layout_height="3dp"
            android:id="@+id/view"
            class="android.widget.TextView"
            android:layout_width="wrap_content"
            android:background="@color/material_dynamic_neutral40" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:paddingLeft="150dp"
            android:text="@string/subtotal1"
            android:textColor="@color/design_default_color_secondary_variant" />

        <TextView
            android:id="@+id/textVie13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_43_4"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:paddingLeft="130dp"
            android:text="@string/costo_envio"
            android:textColor="@color/design_default_color_secondary_variant" />

        <TextView
            android:id="@+id/textVie15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:paddingLeft="150dp"
            android:text="@string/cupon"
            android:textColor="@color/design_default_color_secondary_variant" />

        <TextView
            android:id="@+id/textVie17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:paddingLeft="150dp"
            android:text="@string/total"
            android:textColor="@color/design_default_color_secondary_variant" />

        <TextView
            android:id="@+id/textVie19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_48_4"
            android:textAlignment="center"/>
    </TableRow>


</TableLayout>

